--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -114,12 +113,36 @@
 	}
 }
 
+/* Regular */
 @font-face {
-	font-family: 'Noto Sans JP';
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
+  font-family: 'Noto Sans JP';
+  font-weight: 400; /* Regular */
+  font-style: normal;
+  src: url('/fonts/NotoSansJP-Regular.ttf') format('truetype');
+}
+
+/* Bold */
+@font-face {
+  font-family: 'Noto Sans JP';
+  font-weight: 700; /* Bold */
+  font-style: normal;
+  src: url('/fonts/NotoSansJP-Bold.ttf') format('truetype');
+}
+
+/* Light */
+@font-face {
+  font-family: 'Noto Sans JP';
+  font-weight: 300; /* Light */
+  font-style: normal;
+  src: url('/fonts/NotoSansJP-Light.ttf') format('truetype');
+}
+
+/* Medium */
+@font-face {
+  font-family: 'Noto Sans JP';
+  font-weight: 500; /* Medium */
+  font-style: normal;
+  src: url('/fonts/NotoSansJP-SemiBold.ttf') format('truetype');
 }
 
 @layer base {
