--- a/src/app.css
+++ b/src/app.css
@@ -4,16 +4,18 @@
 
 @font-face {
 	font-family: 'Noto Sans JP';
-	font-weight: 400; /* Regular */
+	font-weight: 400;
 	font-style: normal;
 	src: url('/fonts/NotoSansJP-Regular.ttf') format('truetype');
-}
+	font-display: swap; /* Ensures fallback font is used without shift */
+  }
 
 @font-face {
 	font-family: 'Noto Sans JP';
 	font-weight: 700; /* Bold */
 	font-style: normal;
 	src: url('/fonts/NotoSansJP-Bold.ttf') format('truetype');
+	font-display: swap; /* Ensures fallback font is used without shift */
 }
 
 @layer base {
