--- a/src/app.css
+++ b/src/app.css
@@ -254,6 +254,8 @@ html {
 .heading-container {
 	position: relative;
 	display: inline-block;
+    padding-bottom: 6px; 
+
 }
 
 .heading-container::after {
@@ -261,7 +263,7 @@ html {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: 0;
+	width: 100%;
 	height: 4px;
 	background-color: #333;
 	border-radius: 999px;
