--- a/src/app.css
+++ b/src/app.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+/* html {
 	visibility: hidden;
   }
   html.light, html.dark {
 	visibility: visible;
-  }
+  } */
 
 
 @font-face {
