--- a/src/app.css
+++ b/src/app.css
@@ -185,14 +185,14 @@
 		word-break: break-word;
 		overflow-wrap: anywhere;
 	}
-	
 
 	a:hover {
 		color: var(--link-hover-color);
 		text-decoration: none;
 	}
 
-	ul, ol {
+	ul,
+	ol {
 		padding-left: 1.5rem;
 	}
 
@@ -443,6 +443,28 @@ body.dark {
 	}
 }
 
+.fade-out {
+	-webkit-animation: fade-out 0.5s ease-out both;
+	animation: fade-out 0.5s ease-out both;
+}
+
+@-webkit-keyframes fade-out {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes fade-out {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
 /* merge this*/
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
@@ -475,8 +497,6 @@ body.dark {
 	margin-top: 1rem;
 	margin-bottom: 0.5rem;
 }
-
-
 
 .wp-article .has-text-align-left {
 	text-align: left;
@@ -638,20 +658,19 @@ a:hover {
 	width: 100%;
 	max-width: 100%;
 	height: auto;
-  }
-  
-  .wp-block-embed__wrapper {
+}
+
+.wp-block-embed__wrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* Maintains 16:9 aspect ratio */
 	height: 0;
 	overflow: hidden;
-  }
-  
-  .wp-block-embed__wrapper iframe {
+}
+
+.wp-block-embed__wrapper iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-  }
-  
+}
